--- a/SongsForWorship/SongsForWorship/Views/MetreCVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/MetreCVCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -14,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MetreCVCell" id="wwB-3Z-NWv" customClass="MetreCVCell" customModule="PsalmsForWorship" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MetreCVCell" id="wwB-3Z-NWv" customClass="MetreCVCell" customModule="SongsForWorship" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -25,12 +24,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="This is a Psalm title." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="XgI-li-hFF">
-                                <rect key="frame" x="67" y="20" width="186.5" height="26"/>
+                                <rect key="frame" x="62.5" y="20" width="195.5" height="26"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="22"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="This is the verses label This is the verses label This is the verses" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" minimumFontSize="14" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="7N1-aB-mRJ">
-                                <rect key="frame" x="10" y="54" width="300" height="33"/>
+                                <rect key="frame" x="14.5" y="54" width="291" height="33"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="14"/>
                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -40,27 +39,27 @@
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="18"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="© 2009 Crown and Covenant Publications. Used with permission." lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGt-on-hZf">
-                                <rect key="frame" x="33" y="296" width="254" height="11"/>
+                                <rect key="frame" x="28" y="296" width="264" height="11"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="9"/>
                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RaU-Lh-yFB">
-                                <rect key="frame" x="12" y="232" width="102" height="26"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="RaU-Lh-yFB">
+                                <rect key="frame" x="12" y="232" width="108" height="26"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
                                 <state key="normal" title="John K. Robb, 1929">
                                     <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Db-og-Blb">
-                                <rect key="frame" x="230" y="232" width="63" height="26"/>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="1Db-og-Blb">
+                                <rect key="frame" x="243" y="232" width="65" height="26"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
                                 <state key="normal" title="Wallace CM">
                                     <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWO-YF-vA2">
-                                <rect key="frame" x="263" y="250" width="30" height="26"/>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWO-YF-vA2">
+                                <rect key="frame" x="278" y="250" width="30" height="26"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
                                 <state key="normal" title="CM">
                                     <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -76,7 +75,7 @@
                             <constraint firstAttribute="trailing" secondItem="XgI-li-hFF" secondAttribute="trailing" priority="1" constant="40" placeholder="YES" id="706-ZE-Ivi"/>
                             <constraint firstAttribute="width" constant="320" placeholder="YES" id="8Kz-du-XRw"/>
                             <constraint firstItem="MZ0-TP-MPK" firstAttribute="top" secondItem="7N1-aB-mRJ" secondAttribute="bottom" constant="14" id="Cmk-Oh-cSI"/>
-                            <constraint firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" constant="27" id="DCD-ZD-HgK"/>
+                            <constraint firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" constant="12" id="DCD-ZD-HgK"/>
                             <constraint firstItem="MZ0-TP-MPK" firstAttribute="leading" secondItem="ufP-v0-4Pg" secondAttribute="leading" constant="12" id="FIj-EZ-qLe"/>
                             <constraint firstAttribute="trailing" secondItem="MZ0-TP-MPK" secondAttribute="trailing" constant="12" id="FO7-bW-Gfh"/>
                             <constraint firstAttribute="centerX" secondItem="MZ0-TP-MPK" secondAttribute="centerX" id="JbG-YO-Adp"/>
