--- a/SongsForWorship/SongsForWorship/Views/SongTVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/SongTVCell.xib
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -7,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="SongTVCell" id="2" customClass="SongTVCell" customModule="PsalmsForWorship" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="SongTVCell" id="2" customClass="SongTVCell" customModule="SongsForWorship" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="zTB-8Z-pgH">
@@ -41,12 +42,12 @@
                         </constraints>
                     </view>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9">
-                        <rect key="frame" x="149" y="17" width="42" height="20.5"/>
+                        <rect key="frame" x="149" y="17" width="42" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fe9-W6-Tjc">
-                        <rect key="frame" x="287" y="19" width="18" height="16"/>
+                        <rect key="frame" x="286" y="19" width="18" height="16"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16.199999999999999" id="BVS-99-dGs"/>
@@ -64,7 +65,9 @@
                     <constraint firstItem="UyA-p8-X8n" firstAttribute="leading" secondItem="zTB-8Z-pgH" secondAttribute="leading" constant="8" id="TDn-68-cHq"/>
                     <constraint firstAttribute="centerY" secondItem="9" secondAttribute="centerY" id="Twu-WQ-8cy"/>
                     <constraint firstItem="Fe9-W6-Tjc" firstAttribute="centerY" secondItem="zTB-8Z-pgH" secondAttribute="centerY" id="Yq0-va-Ft7"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="9" secondAttribute="bottom" constant="16.5" id="ZeA-jB-b9x"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Fe9-W6-Tjc" secondAttribute="trailing" id="bdw-ou-2C1"/>
+                    <constraint firstItem="9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zTB-8Z-pgH" secondAttribute="top" constant="17" id="g2k-wz-hKl"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9" secondAttribute="trailing" id="hx3-8I-TQe"/>
                     <constraint firstItem="9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UyA-p8-X8n" secondAttribute="trailing" constant="10" id="yaC-Ls-LRf"/>
                 </constraints>
