--- a/SongsForWorship/SongsForWorship/Views/MetreCVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/MetreCVCell.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -24,12 +26,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="This is a Psalm title." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="XgI-li-hFF">
-                                <rect key="frame" x="62.5" y="20" width="195.5" height="26"/>
+                                <rect key="frame" x="67" y="20" width="186.5" height="26"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="22"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="This is the verses label This is the verses label This is the verses" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" minimumFontSize="14" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="7N1-aB-mRJ">
-                                <rect key="frame" x="14.5" y="54" width="291" height="33"/>
+                                <rect key="frame" x="10" y="54" width="300" height="33"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="14"/>
                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -39,62 +41,77 @@
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="18"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="© 2009 Crown and Covenant Publications. Used with permission." lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGt-on-hZf">
-                                <rect key="frame" x="28" y="296" width="264" height="11"/>
+                                <rect key="frame" x="33" y="296" width="254" height="11"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="9"/>
                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="RaU-Lh-yFB">
-                                <rect key="frame" x="12" y="232" width="108" height="26"/>
-                                <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
-                                <state key="normal" title="John K. Robb, 1929">
-                                    <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="1Db-og-Blb">
-                                <rect key="frame" x="243" y="232" width="65" height="26"/>
-                                <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
-                                <state key="normal" title="Wallace CM">
-                                    <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWO-YF-vA2">
-                                <rect key="frame" x="278" y="250" width="30" height="26"/>
-                                <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
-                                <state key="normal" title="CM">
-                                    <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                </state>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ia5-Wd-SSf">
+                                <rect key="frame" x="12" y="232" width="296" height="44"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="RaU-Lh-yFB">
+                                        <rect key="frame" x="0.0" y="0.0" width="148" height="26"/>
+                                        <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
+                                        <state key="normal" title="John K. Robb, 1929">
+                                            <color key="titleColor" systemColor="labelColor"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="1Db-og-Blb">
+                                        <rect key="frame" x="148" y="0.0" width="148" height="26"/>
+                                        <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
+                                        <state key="normal" title="Wallace CM">
+                                            <color key="titleColor" systemColor="labelColor"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWO-YF-vA2">
+                                        <rect key="frame" x="148" y="18" width="148" height="26"/>
+                                        <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
+                                        <state key="normal" title="CM">
+                                            <color key="titleColor" systemColor="labelColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="RaU-Lh-yFB" firstAttribute="leading" secondItem="ia5-Wd-SSf" secondAttribute="leading" id="1hk-9f-cjM"/>
+                                    <constraint firstItem="bWO-YF-vA2" firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" id="BxR-vH-R4j"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RaU-Lh-yFB" secondAttribute="bottom" id="JBk-4c-FPe"/>
+                                    <constraint firstItem="bWO-YF-vA2" firstAttribute="top" secondItem="1Db-og-Blb" secondAttribute="bottom" constant="-8" id="Kkt-uu-q08"/>
+                                    <constraint firstItem="RaU-Lh-yFB" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="Mxg-H9-P6a"/>
+                                    <constraint firstItem="1Db-og-Blb" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="top" id="PsT-RY-VP8"/>
+                                    <constraint firstItem="RaU-Lh-yFB" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="top" id="QX3-KB-tjf"/>
+                                    <constraint firstAttribute="bottom" secondItem="bWO-YF-vA2" secondAttribute="bottom" id="a7Y-dm-L5X"/>
+                                    <constraint firstItem="bWO-YF-vA2" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="gOP-Gu-xWn"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" id="m2c-r3-k2S"/>
+                                    <constraint firstItem="1Db-og-Blb" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="oCP-bW-0WB"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="7N1-aB-mRJ" secondAttribute="centerX" id="0AJ-yb-PE6"/>
                             <constraint firstItem="XgI-li-hFF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ufP-v0-4Pg" secondAttribute="leading" priority="999" constant="10" id="3zx-cD-ErD"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7N1-aB-mRJ" secondAttribute="trailing" constant="10" id="43t-9v-Ur8"/>
-                            <constraint firstItem="bWO-YF-vA2" firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" id="4In-jF-Bg4"/>
                             <constraint firstAttribute="trailing" secondItem="XgI-li-hFF" secondAttribute="trailing" priority="1" constant="40" placeholder="YES" id="706-ZE-Ivi"/>
                             <constraint firstAttribute="width" constant="320" placeholder="YES" id="8Kz-du-XRw"/>
                             <constraint firstItem="MZ0-TP-MPK" firstAttribute="top" secondItem="7N1-aB-mRJ" secondAttribute="bottom" constant="14" id="Cmk-Oh-cSI"/>
-                            <constraint firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" constant="12" id="DCD-ZD-HgK"/>
                             <constraint firstItem="MZ0-TP-MPK" firstAttribute="leading" secondItem="ufP-v0-4Pg" secondAttribute="leading" constant="12" id="FIj-EZ-qLe"/>
                             <constraint firstAttribute="trailing" secondItem="MZ0-TP-MPK" secondAttribute="trailing" constant="12" id="FO7-bW-Gfh"/>
+                            <constraint firstItem="ia5-Wd-SSf" firstAttribute="top" secondItem="MZ0-TP-MPK" secondAttribute="bottom" constant="110" id="Ihz-ct-Wl5"/>
                             <constraint firstAttribute="centerX" secondItem="MZ0-TP-MPK" secondAttribute="centerX" id="JbG-YO-Adp"/>
                             <constraint firstAttribute="centerX" secondItem="QGt-on-hZf" secondAttribute="centerX" id="KUz-ph-Ngb"/>
-                            <constraint firstItem="1Db-og-Blb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RaU-Lh-yFB" secondAttribute="trailing" constant="10" id="KkI-EG-6C5"/>
                             <constraint firstItem="7N1-aB-mRJ" firstAttribute="top" secondItem="XgI-li-hFF" secondAttribute="bottom" constant="8" id="PLy-OW-gsf"/>
+                            <constraint firstItem="QGt-on-hZf" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="bottom" constant="20" id="UOm-yd-Tzw"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QGt-on-hZf" secondAttribute="bottom" constant="10" id="Uob-cX-AGA"/>
-                            <constraint firstItem="RaU-Lh-yFB" firstAttribute="leading" secondItem="MZ0-TP-MPK" secondAttribute="leading" id="Xr5-Cr-Oc2"/>
                             <constraint firstItem="XgI-li-hFF" firstAttribute="leading" secondItem="ufP-v0-4Pg" secondAttribute="leading" priority="1" constant="40" placeholder="YES" id="bW5-Kh-Mo1"/>
                             <constraint firstItem="XgI-li-hFF" firstAttribute="centerX" secondItem="ufP-v0-4Pg" secondAttribute="centerX" id="cxP-bD-efu"/>
-                            <constraint firstItem="1Db-og-Blb" firstAttribute="centerY" secondItem="RaU-Lh-yFB" secondAttribute="centerY" id="hOE-36-5La"/>
-                            <constraint firstItem="bWO-YF-vA2" firstAttribute="top" secondItem="1Db-og-Blb" secondAttribute="bottom" constant="-8" id="hg6-XV-Ohg"/>
-                            <constraint firstItem="QGt-on-hZf" firstAttribute="top" secondItem="bWO-YF-vA2" secondAttribute="bottom" constant="20" id="hoB-i4-lsC"/>
+                            <constraint firstItem="ia5-Wd-SSf" firstAttribute="trailing" secondItem="MZ0-TP-MPK" secondAttribute="trailing" id="eg6-qB-MZW"/>
                             <constraint firstItem="XgI-li-hFF" firstAttribute="top" secondItem="ufP-v0-4Pg" secondAttribute="top" constant="20" id="kJ9-3l-iIf"/>
                             <constraint firstItem="7N1-aB-mRJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ufP-v0-4Pg" secondAttribute="leading" constant="10" id="lHF-Gn-6X4"/>
+                            <constraint firstItem="ia5-Wd-SSf" firstAttribute="leading" secondItem="MZ0-TP-MPK" secondAttribute="leading" id="ptW-y0-BG1"/>
                             <constraint firstAttribute="centerX" secondItem="XgI-li-hFF" secondAttribute="centerX" id="shm-0F-vIc"/>
                             <constraint firstAttribute="bottom" secondItem="QGt-on-hZf" secondAttribute="bottom" priority="750" constant="329" placeholder="YES" id="tdw-Ry-b6V"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XgI-li-hFF" secondAttribute="trailing" priority="999" constant="10" id="wxG-Dm-4Qf"/>
-                            <constraint firstItem="RaU-Lh-yFB" firstAttribute="top" secondItem="MZ0-TP-MPK" secondAttribute="bottom" constant="110" id="xXd-rZ-jOA"/>
                         </constraints>
                         <connections>
                             <outlet property="delegate" destination="wwB-3Z-NWv" id="leX-0T-dzd"/>
@@ -120,7 +137,15 @@
                 <outlet property="tuneButton" destination="1Db-og-Blb" id="qSD-J6-1Hh"/>
                 <outlet property="versesLabel" destination="7N1-aB-mRJ" id="cUb-oa-PGI"/>
             </connections>
-            <point key="canvasLocation" x="481.60000000000002" y="316.19190404797604"/>
+            <point key="canvasLocation" x="123" y="388"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
