--- a/SongsForWorship/SongsForWorship/Main_iPad.storyboard
+++ b/SongsForWorship/SongsForWorship/Main_iPad.storyboard
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="8vK-aN-gDQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="8vK-aN-gDQ">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--DetailVC-->
         <scene sceneID="eUP-uY-SEf">
             <objects>
-                <viewController id="OW7-fj-Z6I" customClass="DetailVC" customModule="PsalmsForWorship" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="OW7-fj-Z6I" customClass="DetailVC" customModule="SongsForWorship" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="PxF-np-Ivz"/>
                         <viewControllerLayoutGuide type="bottom" id="D7n-I4-GkR"/>
@@ -19,10 +18,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="974"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Jh-d5-xon">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Jh-d5-xon">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="974"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewLayout key="collectionViewLayout" id="UQb-mf-lvq" customClass="FlowLayout" customModule="PsalmsForWorship" customModuleProvider="target"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewLayout key="collectionViewLayout" id="UQb-mf-lvq" customClass="FlowLayout" customModule="SongsForWorship" customModuleProvider="target"/>
                                 <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="OW7-fj-Z6I" id="gtr-5g-XJA"/>
@@ -30,7 +29,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="2Jh-d5-xon" firstAttribute="top" secondItem="PxF-np-Ivz" secondAttribute="bottom" id="J0L-1v-7Cj"/>
                             <constraint firstItem="2Jh-d5-xon" firstAttribute="leading" secondItem="u4k-wE-fUd" secondAttribute="leading" id="Led-TL-OTg"/>
@@ -111,9 +110,12 @@
             <point key="canvasLocation" x="467.96875" y="379.6875"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="heart_outline" width="20" height="18"/>
         <image name="tunes_icon" width="10" height="14"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
-    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
