--- a/SongsForWorship/SongsForWorship/Views/MetreCVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/MetreCVCell.xib
@@ -22,7 +22,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="1000" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufP-v0-4Pg">
+                    <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="1000" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufP-v0-4Pg">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="This is a Psalm title." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="XgI-li-hFF">
@@ -40,31 +40,33 @@
                                 <rect key="frame" x="12" y="101" width="296" height="21"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="18"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="© 2009 Crown and Covenant Publications. Used with permission." lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGt-on-hZf">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" text="© 2009 Crown and Covenant Publications. Used with permission." lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGt-on-hZf">
                                 <rect key="frame" x="33" y="296" width="254" height="11"/>
                                 <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="9"/>
                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ia5-Wd-SSf">
+                            <view contentMode="scaleToFill" verticalHuggingPriority="1000" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ia5-Wd-SSf">
                                 <rect key="frame" x="12" y="232" width="296" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="RaU-Lh-yFB">
-                                        <rect key="frame" x="0.0" y="0.0" width="148" height="26"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Composer" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="1rc-zb-SJm" userLabel="Composer">
+                                        <rect key="frame" x="0.0" y="0.0" width="148" height="14"/>
                                         <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
-                                        <state key="normal" title="John K. Robb, 1929">
-                                            <color key="titleColor" systemColor="labelColor"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="1Db-og-Blb">
-                                        <rect key="frame" x="148" y="0.0" width="148" height="26"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="1Db-og-Blb">
+                                        <rect key="frame" x="148" y="-6" width="148" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="fUi-H0-T8j"/>
+                                        </constraints>
+                                        <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="8" right="8"/>
                                         <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
                                         <state key="normal" title="Wallace CM">
                                             <color key="titleColor" systemColor="labelColor"/>
                                         </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWO-YF-vA2">
-                                        <rect key="frame" x="148" y="18" width="148" height="26"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWO-YF-vA2">
+                                        <rect key="frame" x="148" y="16" width="148" height="26"/>
                                         <fontDescription key="fontDescription" name="StempelGaramondLTStd-Roman" family="Stempel Garamond LT Std" pointSize="12"/>
                                         <state key="normal" title="CM">
                                             <color key="titleColor" systemColor="labelColor"/>
@@ -73,17 +75,17 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="RaU-Lh-yFB" firstAttribute="leading" secondItem="ia5-Wd-SSf" secondAttribute="leading" id="1hk-9f-cjM"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bWO-YF-vA2" secondAttribute="bottom" id="0i4-AN-Rjs"/>
+                                    <constraint firstItem="1rc-zb-SJm" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="top" id="5nX-er-QYe"/>
                                     <constraint firstItem="bWO-YF-vA2" firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" id="BxR-vH-R4j"/>
-                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RaU-Lh-yFB" secondAttribute="bottom" id="JBk-4c-FPe"/>
                                     <constraint firstItem="bWO-YF-vA2" firstAttribute="top" secondItem="1Db-og-Blb" secondAttribute="bottom" constant="-8" id="Kkt-uu-q08"/>
-                                    <constraint firstItem="RaU-Lh-yFB" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="Mxg-H9-P6a"/>
-                                    <constraint firstItem="1Db-og-Blb" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="top" id="PsT-RY-VP8"/>
-                                    <constraint firstItem="RaU-Lh-yFB" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="top" id="QX3-KB-tjf"/>
-                                    <constraint firstAttribute="bottom" secondItem="bWO-YF-vA2" secondAttribute="bottom" id="a7Y-dm-L5X"/>
+                                    <constraint firstItem="1Db-og-Blb" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="top" constant="-6" id="PsT-RY-VP8"/>
+                                    <constraint firstItem="1rc-zb-SJm" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="UAv-F3-h30"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1rc-zb-SJm" secondAttribute="bottom" id="VfQ-xU-LbO"/>
                                     <constraint firstItem="bWO-YF-vA2" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="gOP-Gu-xWn"/>
                                     <constraint firstAttribute="trailing" secondItem="1Db-og-Blb" secondAttribute="trailing" id="m2c-r3-k2S"/>
                                     <constraint firstItem="1Db-og-Blb" firstAttribute="width" secondItem="ia5-Wd-SSf" secondAttribute="width" multiplier="1:2" id="oCP-bW-0WB"/>
+                                    <constraint firstItem="1rc-zb-SJm" firstAttribute="leading" secondItem="ia5-Wd-SSf" secondAttribute="leading" id="qN8-hi-Dih"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -102,7 +104,7 @@
                             <constraint firstAttribute="centerX" secondItem="QGt-on-hZf" secondAttribute="centerX" id="KUz-ph-Ngb"/>
                             <constraint firstItem="7N1-aB-mRJ" firstAttribute="top" secondItem="XgI-li-hFF" secondAttribute="bottom" constant="8" id="PLy-OW-gsf"/>
                             <constraint firstItem="QGt-on-hZf" firstAttribute="top" secondItem="ia5-Wd-SSf" secondAttribute="bottom" constant="20" id="UOm-yd-Tzw"/>
-                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QGt-on-hZf" secondAttribute="bottom" constant="10" id="Uob-cX-AGA"/>
+                            <constraint firstAttribute="bottom" secondItem="QGt-on-hZf" secondAttribute="bottom" constant="10" id="Uob-cX-AGA"/>
                             <constraint firstItem="XgI-li-hFF" firstAttribute="leading" secondItem="ufP-v0-4Pg" secondAttribute="leading" priority="1" constant="40" placeholder="YES" id="bW5-Kh-Mo1"/>
                             <constraint firstItem="XgI-li-hFF" firstAttribute="centerX" secondItem="ufP-v0-4Pg" secondAttribute="centerX" id="cxP-bD-efu"/>
                             <constraint firstItem="ia5-Wd-SSf" firstAttribute="trailing" secondItem="MZ0-TP-MPK" secondAttribute="trailing" id="eg6-qB-MZW"/>
@@ -110,7 +112,6 @@
                             <constraint firstItem="7N1-aB-mRJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ufP-v0-4Pg" secondAttribute="leading" constant="10" id="lHF-Gn-6X4"/>
                             <constraint firstItem="ia5-Wd-SSf" firstAttribute="leading" secondItem="MZ0-TP-MPK" secondAttribute="leading" id="ptW-y0-BG1"/>
                             <constraint firstAttribute="centerX" secondItem="XgI-li-hFF" secondAttribute="centerX" id="shm-0F-vIc"/>
-                            <constraint firstAttribute="bottom" secondItem="QGt-on-hZf" secondAttribute="bottom" priority="750" constant="329" placeholder="YES" id="tdw-Ry-b6V"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XgI-li-hFF" secondAttribute="trailing" priority="999" constant="10" id="wxG-Dm-4Qf"/>
                         </constraints>
                         <connections>
@@ -128,7 +129,7 @@
             </constraints>
             <size key="customSize" width="320" height="455"/>
             <connections>
-                <outlet property="composerButton" destination="RaU-Lh-yFB" id="9Nw-jV-f5v"/>
+                <outlet property="composerLabel" destination="1rc-zb-SJm" id="AmX-hz-twb"/>
                 <outlet property="copyrightLabel" destination="QGt-on-hZf" id="uft-qg-dGP"/>
                 <outlet property="meterButton" destination="bWO-YF-vA2" id="gju-5Y-Zeg"/>
                 <outlet property="metreLabel" destination="MZ0-TP-MPK" id="Hsg-qZ-c9C"/>
